Add Teensy cores as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "display/libraries/SmartMatrix"]
 	path = display/libraries/SmartMatrix
 	url = git@github.com:ncortot/SmartMatrix.git
+[submodule "vendor/cores"]
+	path = vendor/cores
+	url = git@github.com:ncortot/cores.git
